tests/models/struct/named/vec/pass/alias.rs
use dade::model;
#[model]
struct TestModel {
    #[field(alias = "val")]
    value: Vec<()>,
}
fn main() {}
