tests/models/struct/named/vec/fail/max_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_items = 2.0)]
    value: Vec<()>,
}
fn main() {}
